Import of KENTNL/Dist-Zilla-Plugin-Prereqs-Recommend-MatchInstalled-0.003000 from CPAN.
gitpan-cpan-distribution: Dist-Zilla-Plugin-Prereqs-Recommend-MatchInstalled
gitpan-cpan-version:      0.003000
gitpan-cpan-path:         KENTNL/Dist-Zilla-Plugin-Prereqs-Recommend-MatchInstalled-0.003000.tar.gz
gitpan-cpan-author:       KENTNL
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     versions of things you have as soft dependencies
 
 VERSION
-    version 0.002001
+    version 0.003000
 
 SYNOPSIS
     "[Prereqs::MatchInstalled]" was a good concept, but its application
@@ -115,7 +115,7 @@ ATTRIBUTES
     "applyto_map" may be declared multiple times.
 
 AUTHOR
-    Kent Fredric <kentfredric@gmail.com>
+    Kent Fredric <kentnl@cpan.org>
 
 COPYRIGHT AND LICENSE
     This software is copyright (c) 2014 by Kent Fredric
